--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.12'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+
 
 }
