--- a/build.gradle
+++ b/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.12'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    compile group: 'commons-validator', name: 'commons-validator', version: '1.5.1'
 }
